--- a/widget/AndroidManifest.xml
+++ b/widget/AndroidManifest.xml
@@ -36,6 +36,9 @@
 
         <activity android:name="ContextMenuActivity"></activity>
         <activity android:name="SubMenuActivity"></activity>
+        <activity android:name="SubStartActivityForResultDemoPageActivity"></activity>
+        <activity android:name="StartActivityForResultDemoPageActivity"></activity>
+
 
 
     </application>
