--- a/widget/AndroidManifest.xml
+++ b/widget/AndroidManifest.xml
@@ -5,8 +5,7 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7"/>
     <application android:label="@string/app_name" android:icon="@drawable/icon">
-        <activity android:name="MyActivity"
-                  android:label="@string/app_name">
+        <activity android:name="MyActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -38,8 +37,11 @@
         <activity android:name="SubMenuActivity"></activity>
         <activity android:name="SubStartActivityForResultDemoPageActivity"></activity>
         <activity android:name="StartActivityForResultDemoPageActivity"></activity>
+        <activity android:name="HorizonVerticalPageActivity" android:screenOrientation="sensor" android:configChanges="orientation|keyboardHidden">
+        </activity>
 
-
+        <activity android:name="NotifyPageActivity"></activity>
+        <activity android:name="NotifyResultActivity"></activity>
 
     </application>
 
