--- a/db/AndroidManifest.xml
+++ b/db/AndroidManifest.xml
@@ -12,5 +12,17 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+
+
+        <activity android:name=".DBListPageActivity"></activity>
+        <activity android:name=".InternetHttpActivity"></activity>
+
     </application>
+
+
+    <!--拨打电话的权限-->
+    <uses-permission android:name="android.permission.CAll_PHONE"/>
+    <!--访问网络的权限-->
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest> 
