--- a/db/AndroidManifest.xml
+++ b/db/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".InternetHttpActivity"></activity>
         <activity android:name=".SharedPreferencesActivity"/>
         <activity android:name=".FileActivity"/>
+        <activity android:name=".SQLiteCRUDActivity"/>
 
     </application>
 
