fix some bugs in db module with ORMLite Framework

--- a/db/AndroidManifest.xml
+++ b/db/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity android:name=".FileActivity"/>
         <activity android:name=".SQLiteCRUDActivity"/>
 
+        <activity android:name="com.example.ORMLite.MainActivity"/>
+        <activity android:name="com.example.ORMLite.StudentListActivity"/>
+
     </application>
 
 
