--- a/db/AndroidManifest.xml
+++ b/db/AndroidManifest.xml
@@ -19,6 +19,8 @@
         <activity android:name=".InternetHttpActivity"></activity>
         <activity android:name=".SharedPreferencesActivity"/>
         <activity android:name=".FileActivity"/>
+        <activity android:name=".SQLiteIntroActivity"/>
+        <activity android:name=".RegisterActivity"></activity>
         <activity android:name=".SQLiteCRUDActivity"/>
 
         <activity android:name="com.example.ORMLite.MainActivity"/>
