--- a/db/AndroidManifest.xml
+++ b/db/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity android:name="com.example.ORMLite.MainActivity"/>
         <activity android:name="com.example.ORMLite.StudentListActivity"/>
 
+        <activity android:name=".PhoneContactsActivity"></activity>
+
         <!--<uses-library android:name="android.test"></uses-library>-->
         <!--<uses-library android:name="junit.runner"/>-->
     </application>
@@ -38,4 +40,8 @@
     <uses-permission android:name="android.permission.CAll_PHONE"/>
     <!--访问网络的权限-->
     <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!--读写联系人的权限-->
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
 </manifest> 
