--- a/db/AndroidManifest.xml
+++ b/db/AndroidManifest.xml
@@ -3,7 +3,10 @@
           package="com.example"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8"/>
+    <!--minSdkVersion     8 :android version 2.2-->
+    <!--targetSdkVersion 16 :android version 4.1-->
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="16"/>
+
     <application android:label="@string/app_name" android:icon="@drawable/icon">
         <activity android:name="MyActivity"
                   android:label="@string/app_name">
