--- a/net/AndroidManifest.xml
+++ b/net/AndroidManifest.xml
@@ -3,7 +3,9 @@
           package="com.example"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8"/>
+    <!--minSdkVersion     8 :android version 2.2-->
+    <!--targetSdkVersion 16 :android version 4.1-->
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="16"/>
     <application android:label="@string/app_name" android:icon="@drawable/icon">
         <activity android:name="MyActivity"
                   android:label="@string/app_name">
@@ -12,5 +14,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".WeatherForecastActivity"/>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest> 
