get smsMessage in widget module

--- a/widget/AndroidManifest.xml
+++ b/widget/AndroidManifest.xml
@@ -79,6 +79,15 @@
         <activity android:name="NotifyPageActivity"></activity>
         <activity android:name="NotifyResultActivity"></activity>
 
+        <activity android:name="AndroidCorePageActivity"></activity>
+        <activity android:name="IntentIntroActivity"/>
+        <activity android:name=".IntentBroadcastActivity"/>
+        <activity android:name=".SMSReceiveActivity"></activity>
+        <receiver android:name=".SMSBroadCastReceiver">
+            <intent-filter android:priority="1000">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+            </intent-filter>
+        </receiver>
 
     </application>
 
@@ -87,5 +96,9 @@
     <uses-permission android:name="android.permission.CAll_PHONE"/>
     <!--访问网络的权限-->
     <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!--拦截短信的权限-->
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
 
 </manifest> 
