--- a/widget/AndroidManifest.xml
+++ b/widget/AndroidManifest.xml
@@ -3,6 +3,22 @@
           package="com.example"
           android:versionCode="1"
           android:versionName="1.0">
+    <!-- 向SD卡写入数据权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- 在sd卡中创建与删除文件权限 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+
+    <!--拨打电话的权限-->
+    <uses-permission android:name="android.permission.CAll_PHONE"/>
+
+    <!--访问网络的权限-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!--拦截短信的权限-->
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
+
+
     <!--minSdkVersion     8 :android version 2.2-->
     <!--targetSdkVersion 16 :android version 4.1-->
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="16"/>
@@ -92,13 +108,5 @@
     </application>
 
 
-    <!--拨打电话的权限-->
-    <uses-permission android:name="android.permission.CAll_PHONE"/>
-    <!--访问网络的权限-->
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-    <!--拦截短信的权限-->
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-    <uses-permission android:name="android.permission.READ_SMS"/>
 
 </manifest> 
