listview load images from memoryCache, file and network in advance module

--- a/advance/AndroidManifest.xml
+++ b/advance/AndroidManifest.xml
@@ -4,6 +4,24 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="16"/>
+
+    <!--网络权限-->
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <!--获取当前位置信息权限-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <!--获取网络状态权限-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <!--写SD卡权限-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <!--读取手机状态权限-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <!--获取wifi状态权限-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <!--更改wifi状态权限-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+
+
     <application android:label="@string/app_name" android:icon="@drawable/icon">
         <activity android:name="MyActivity"
                   android:label="@string/app_name">
