--- a/widget/AndroidManifest.xml
+++ b/widget/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
     <!--minSdkVersion     8 :android version 2.2-->
     <!--targetSdkVersion 16 :android version 4.1-->
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="16"/>
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19"/>
     <application android:label="@string/app_name" android:icon="@drawable/icon">
         <activity android:name="com.example.MyActivity" android:label="@string/app_name" android:theme="@style/custom_title_style">
             <intent-filter>
@@ -112,7 +112,8 @@
         <activity android:name=".SingleTaskActivity" android:theme="@style/custom_title_style"></activity>
         <activity android:name=".SingleTopActivity" android:theme="@style/custom_title_style"></activity>
         <activity android:name=".SingleInstanceActivity" android:theme="@style/custom_title_style"></activity>
-
+        <!--Activity life -->
+        <activity android:name=".ActivityLifeActivity" android:theme="@style/custom_title_style"></activity>
 
         <!--Service-->
         <service android:name=".MyDemoService" android:enabled="true"></service>
