--- a/widget/AndroidManifest.xml
+++ b/widget/AndroidManifest.xml
@@ -112,8 +112,11 @@
         <activity android:name=".SingleTaskActivity" android:theme="@style/custom_title_style"></activity>
         <activity android:name=".SingleTopActivity" android:theme="@style/custom_title_style"></activity>
         <activity android:name=".SingleInstanceActivity" android:theme="@style/custom_title_style"></activity>
+
         <!--Activity life -->
         <activity android:name=".ActivityLifeActivity" android:theme="@style/custom_title_style"></activity>
+        <activity android:name=".FirstActivity" android:theme="@style/custom_title_style"></activity>
+
 
         <!--Service-->
         <service android:name=".MyDemoService" android:enabled="true"></service>
